--- a/Test FK.ipynb
+++ b/Test FK.ipynb
@@ -32,11 +32,17 @@
     "### KUKA KR210 ###\n",
     "s = {\n",
     "    alpha0: 0,     a0:    0,          d1: 0.75,\n",
+    "    \n",
     "    alpha1: -pi/2, a1:    0.35,       d2: 0,       q2: (q2 - pi/2),\n",
+    "    \n",
     "    alpha2: 0,     a2:    1.25,       d3: 0,\n",
+    "    \n",
     "    alpha3: -pi/2, a3:  -0.054,       d4: 1.50,\n",
+    "    \n",
     "    alpha4: pi/2,  a4:       0,       d5: 0,\n",
+    "    \n",
     "    alpha5: -pi/2, a5:       0,       d6: 0,\n",
+    "    \n",
     "    alpha6: 0,     a6:       0,       d7: 0.303,    q7:0\n",
     "    \n",
     "}\n"
@@ -150,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 210,
    "metadata": {
     "scrolled": true
    },
@@ -216,8 +222,8 @@
     }
    ],
    "source": [
-    "sub_dict = {q1:-2.77, q2:0.36, q3:-2.41, q4:4.56, q5:1.31, q6:4.70}\n",
-    "sub_dict_center = {q1:0, q2: 0, q3:0, q4:0, q5:0, q6:0}\n",
+    "sub_dict_center = {q1:0, q2:-0, q3:0, q4:0, q5:0, q6:0}\n",
+    "#sub_dict_center = {q1:0, q2: 0, q3:0, q4:0, q5:0, q6:0}\n",
     "print(\"T0_1 = \", T0_1.evalf(subs=sub_dict_center))\n",
     "print(\"\\n\")\n",
     "print(\"T0_2 = \", T0_2.evalf(subs=sub_dict_center))\n",
@@ -236,159 +242,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('T1_2 ', Matrix([\n",
-      "[sin(q2),  cos(q2), 0, 0.35],\n",
-      "[      0,        0, 1,    0],\n",
-      "[      0, -sin(q2), 0,    0],\n",
-      "[      0,        0, 0,    1]]))\n",
-      "\n",
-      "\n",
-      "('T0_1 ', Matrix([\n",
-      "[cos(q1), -sin(q1), 0,    0],\n",
-      "[sin(q1),  cos(q1), 0,    0],\n",
-      "[sin(q1),        0, 1, 0.75],\n",
-      "[      0,        0, 0,    1]]))\n",
-      "\n",
-      "\n",
-      "('T2_3 ', Matrix([\n",
-      "[cos(q3), -sin(q3), 0, 1.25],\n",
-      "[sin(q3),  cos(q3), 0,    0],\n",
-      "[sin(q3),        0, 1,    0],\n",
-      "[      0,        0, 0,    1]]))\n",
-      "\n",
-      "\n",
-      "('T0_2 ', Matrix([\n",
-      "[sin(q2)*cos(q1),           cos(q1)*cos(q2), -sin(q1),        0.35*cos(q1)],\n",
-      "[sin(q1)*sin(q2),           sin(q1)*cos(q2),  cos(q1),        0.35*sin(q1)],\n",
-      "[sin(q1)*sin(q2), sin(q1)*cos(q2) - sin(q2),        0, 0.35*sin(q1) + 0.75],\n",
-      "[              0,                         0,        0,                   1]]))\n",
-      "('T0_1 ', Matrix([\n",
-      "[cos(q1), -sin(q1), 0,    0],\n",
-      "[sin(q1),  cos(q1), 0,    0],\n",
-      "[sin(q1),        0, 1, 0.75],\n",
-      "[      0,        0, 0,    1]]))\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"T1_2 \", T1_2)\n",
-    "print(\"\\n\")\n",
-    "print(\"T0_1 \", T0_1)\n",
-    "print(\"\\n\")\n",
-    "print(\"T2_3 \", T2_3)\n",
-    "print(\"\\n\")\n",
-    "print(\"T0_2 \", T0_2)\n",
-    "print(\"T0_1 \", T0_1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('cos q2-pi/2', sin(q2))\n",
-      "('sin q2-pi/2', -cos(q2))\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_02 = Matrix([cos(q2)])\n",
-    "test_02.subs(s)\n",
-    "a_dict = {q2: q2 - pi/2}\n",
-    "a = cos(q2)\n",
-    "b= sin(q2)\n",
-    "print (\"cos q2-pi/2\",a.subs(a_dict))\n",
-    "print(\"sin q2-pi/2\",b.subs(a_dict))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 219,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "## Total Homogeneous Transform between Base_Link and Gripper_link\n",
-    "T_total = simplify(T0_G * R_corr)\n"
+    "T_total = simplify(T0_G * R_corr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "def Quaternion_toEulerianAngle(x, y, z, w):\n",
-    "    ysqr = y*y\n",
-    "    t0 = +2.0 * (w * x + y*z)\n",
-    "    t1 = +1.0 - 2.0 * (x*x + ysqr)\n",
-    "    X = math.degrees(math.atan2(t0, t1))\n",
-    "    t2 = +2.0 * (w*y - z*x)\n",
-    "    t2 =  1 if t2 > 1 else t2\n",
-    "    t2 = -1 if t2 < -1 else t2\n",
-    "    Y = math.degrees(math.asin(t2))\n",
-    "    t3 = +2.0 * (w * z + x*y)\n",
-    "    t4 = +1.0 - 2.0 * (ysqr + z*z)\n",
-    "    Z = math.degrees(math.atan2(t3, t4))\n",
-    "    return X, Y, Z "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import rospy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.318794916838314, -0.8634756793657775, 0.8087692980522054)"
+       "Matrix([\n",
+       "[                  1.0,                     0, 6.12323399573677e-17, 2.153],\n",
+       "[-7.49879891330929e-33,                   1.0, 1.22464679914735e-16,     0],\n",
+       "[-6.12323399573677e-17, -1.22464679914735e-16,                  1.0, 1.946],\n",
+       "[                    0,                     0,                    0,   1.0]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t02 =T_total.evalf(subs=sub_dict)\n",
-    "t02 = np.matrix(t02)\n",
-    "tf.transformations.euler_from_matrix(t02, axes='szxy')"
+    "T_total.evalf(subs=sub_dict_center)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FIND WRIST CENTER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[ 1.85],\n",
+       "[    0],\n",
+       "[1.946]])"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t0g = T0_G.evalf(subs=sub_dict_center)\n",
+    "\n",
+    "n = t0g[:-1,2:3]\n",
+    "p = t0g[:-1,3:4]\n",
+    "\n",
+    "# multiply for the length \n",
+    "n = 0.303 * n\n",
+    "wc = p - n\n",
+    "wc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### CALCULATE TRANSFORMATION MATRIX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#import rospy\n",
+    "import tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes = 'sxyz'\n",
+    "(roll, pitch, yaw) = tf.transformations.euler_from_quaternion(\n",
+    "                [-0.16599,0.63716,0.6814,0.319637],axes=axes)\n",
+    "trans_mat_0_6 = tf.transformations.euler_matrix(roll,pitch,yaw,axes=axes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.74055884, -0.64712612,  0.18110877,  0.        ],\n",
+       "       [ 0.22407708,  0.01628205,  0.9744354 ,  0.        ],\n",
+       "       [-0.63353143,  0.76220908,  0.13294832,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  1.        ]])"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans_mat_0_6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[0.181108773452352,   0.647126122083639, -0.740558839185365,   0],\n",
+       "[0.974435404342371, -0.0162820483820027,  0.224077079739553,   0],\n",
+       "[0.132948316810348,  -0.762209076971323, -0.633531426244838,   0],\n",
+       "[                0,                   0,                  0, 1.0]])"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans_mat_0_6 = Matrix(trans_mat_0_6) * R_corr\n",
+    "trans_mat_0_6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[0.667643328273166], [-2.44720535516108], [1.25139002215219]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0g = Matrix(trans_mat_0_6)\n",
+    "t0g[0,3] = 0.443254\n",
+    "t0g[1,3] = -2.37931\n",
+    "t0g[2,3] = 1.05943\n",
+    "t0g\n",
+    "n = t0g[:-1,2:3]\n",
+    "p = t0g[:-1,3:4]\n",
+    "\n",
+    "# # multiply for the length \n",
+    "n = 0.303 * n\n",
+    "wc = p - n\n",
+    "wc\n",
+    "print wc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate q1, q2, q3"
+   ]
   },
   {
    "cell_type": "code",
