basic angles are ready

--- a/Test FK.ipynb
+++ b/Test FK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print d7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -242,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +283,7 @@
        "[                    0,                     0,                    0,   1.0]])"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -298,7 +315,7 @@
        "[1.946]])"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -338,33 +355,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "axes = 'sxyz'\n",
+    "axes = 'rxyz'\n",
     "(roll, pitch, yaw) = tf.transformations.euler_from_quaternion(\n",
-    "                [-0,0,0,0],axes=axes)\n",
+    "                [0.306059,0.924682,0.0545878,0.2198],axes=axes)\n",
     "trans_mat_0_6 = tf.transformations.euler_matrix(roll,pitch,yaw,axes=axes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1., -0.,  0.,  0.],\n",
-       "       [ 0.,  1., -0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.]])"
+       "array([[-0.71603192,  0.54201728,  0.43990404,  0.        ],\n",
+       "       [ 0.59001083,  0.80669627, -0.0335908 ,  0.        ],\n",
+       "       [-0.37307574,  0.23549606, -0.89741634,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  1.        ]])"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,20 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Matrix([\n",
-       "[-6.12323399573677e-17, -1.22464679914735e-16,                   1.0,   0],\n",
-       "[ 7.49879891330929e-33,                  -1.0, -1.22464679914735e-16,   0],\n",
-       "[                  1.0,                     0,  6.12323399573677e-17,   0],\n",
-       "[                    0,                     0,                     0, 1.0]])"
+       "[   0.43990403880921, -0.542017276544014, -0.716031918679017,   0],\n",
+       "[-0.0335907980227173, -0.806696272096555,  0.590010832844379,   0],\n",
+       "[ -0.897416344250283, -0.235496064751262, -0.373075741048821,   0],\n",
+       "[                  0,                  0,                  0, 1.0]])"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,25 +417,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix([[0.165865000000000], [-0.229042000000000], [2.58480000000000]])\n"
+      "Matrix([[-0.403601328640258], [3.00762671764815], [0.554649949537793]])\n"
      ]
     }
    ],
    "source": [
     "t0g = Matrix(trans_mat_0_6)\n",
-    "t0g[0,3] = 0.468865\n",
-    "t0g[1,3] = -0.229042\n",
-    "t0g[2,3] = 2.5848\n",
+    "t0g[0,3] =-0.620559\n",
+    "t0g[1,3] = 3.1864\n",
+    "t0g[2,3] = 0.441608\n",
     "t0g\n",
     "n = t0g[:-1,2:3]\n",
     "p = t0g[:-1,3:4]\n",
+    "\n",
+    "R0_6 = t0g[:3,:3]\n",
     "\n",
     "# # multiply for the length \n",
     "n = 0.303 * n\n",
@@ -436,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -447,30 +466,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.054\n",
-      "0.35\n",
-      "1.5\n",
-      "0.75\n",
-      "xc 1.61137714183\n",
-      "yc 0.37417\n",
-      "l35 1.50097168528\n",
-      "l25 1.65424891782\n"
+      "a3\n",
+      "a1\n",
+      "d4\n",
+      "d1\n",
+      "-0.403601328640258\n",
+      "xc -a1 + 3.03458605170313\n",
+      "yc -d1 + 0.554649949537793\n",
+      "l35 sqrt(a3**2 + d4**2)\n",
+      "l25 sqrt((-a1 + 3.03458605170313)**2 + (-d1 + 0.554649949537793)**2)\n"
      ]
     }
    ],
    "source": [
-    "wc = [\n",
-    "  -1.60454,\n",
-    "    1.12803,\n",
-    "    1.12417\n",
-    "]\n",
+    "# wc = [\n",
+    "#   1.84986,\n",
+    "#     0,\n",
+    "#     1.94645\n",
+    "# ]\n",
     "print a3\n",
     "print a1\n",
     "print d4\n",
@@ -479,12 +499,15 @@
     "# a1 = s[a1]\n",
     "# d4 = s[d4]\n",
     "# d1 = s[d1]\n",
-    "\n",
-    "xc = np.sqrt(wc[0]*wc[0] + wc[1]*wc[1]) - a1\n",
+    "#wc = np.matrix(wc)\n",
+    "#wc = np.squeeze(wc,axis=0)\n",
+    "#print np.shape(wc)\n",
+    "print wc[0]\n",
+    "xc = sqrt(wc[0]*wc[0] + wc[1]*wc[1]) - a1\n",
     "yc = wc[2] - d1\n",
     "\n",
-    "l35 = np.sqrt(a3*a3 + d4*d4)\n",
-    "l25 = np.sqrt(xc*xc + yc*yc)\n",
+    "l35 = sqrt(a3*a3 + d4*d4)\n",
+    "l25 = sqrt(xc*xc + yc*yc)\n",
     "\n",
     "print \"xc \"+str(xc)\n",
     "print \"yc \"+str(yc)\n",
@@ -501,14 +524,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 813,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta1: 2.52884009477\n"
+      "theta1: 1.7041920475\n"
      ]
     }
    ],
@@ -526,24 +549,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 832,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta_21 0.228161693239\n",
-      "theta_22 1.05324241831\n",
-      "Q2 -0.289392215248\n"
+      "theta_21 -0.0726392598613\n",
+      "theta_22 0.228205933757\n",
+      "Q2 -1.4152296529\n"
      ]
     }
    ],
    "source": [
     "theta21 = math.atan2(yc,xc)\n",
     "cos_theta22 = ((l25 * l25) + (a2 * a2) - (l35 * l35)) / (2 * a2 * l25)\n",
-    "theta22 = math.atan2(np.sqrt(1 - cos_theta22*cos_theta22), cos_theta22)\n",
-    "theta2 = theta22 + theta21 - np.pi/2\n",
+    "theta22 = math.atan2(sqrt(1 - cos_theta22*cos_theta22), cos_theta22)\n",
+    "theta2 = (theta22 + theta21) - np.pi/2\n",
     "print \"theta_21 \"+str(theta21)\n",
     "print \"theta_22 \"+str(theta22)\n",
     "print \"Q2 \"+str(theta2)"
@@ -559,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 833,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +590,7 @@
      "output_type": "stream",
      "text": [
       "theta31 :1.53481186671\n",
-      "theta32 :1.27916593645\n"
+      "theta32 :2.72385071049\n"
      ]
     }
    ],
@@ -583,16 +606,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
-   "metadata": {},
+   "execution_count": 834,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q1 2.52884009477\n",
-      "Q2 -0.289392215248\n",
-      "Q3 0.327614850427\n"
+      "Q1 1.7041920475\n",
+      "Q2 -1.4152296529\n",
+      "Q3 -1.11706992361\n"
      ]
     }
    ],
@@ -604,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 835,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +638,7 @@
        "1.5707963267948966"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 835,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,6 +646,269 @@
    "source": [
     "np.pi /2 "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Q4, Q5, Q6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 859,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Conversion \n",
+    "\n",
+    "rx,ry,rz = symbols('rx,ry,rz')\n",
+    "\n",
+    "Rot_x = Matrix([[ 1,              0,        0],\n",
+    "              [ 0,        cos(rx), -sin(rx)],\n",
+    "              [ 0,        sin(rx),  cos(rx)]])\n",
+    "\n",
+    "Rot_y = Matrix([[ cos(ry),        0,  sin(ry)],\n",
+    "              [       0,        1,        0],\n",
+    "              [-sin(ry),        0,  cos(ry)]])\n",
+    "\n",
+    "Rot_z = Matrix([[ cos(rz), -sin(rz),        0],\n",
+    "              [ sin(rz),  cos(rz),        0],\n",
+    "              [ 0,              0,        1]])\n",
+    "Rrpy = simplify(Rot_z * Rot_y * Rot_x)\n",
+    "\n",
+    "rdict = {rx:yaw, ry:pitch, rz: roll}\n",
+    "Rrpy_eval = Rrpy.evalf(subs=rdict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 860,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[-0.897416344250283,  0.295142804267754,  0.327924732463753],\n",
+       "[0.0335907980227172,  0.786834161063674, -0.616249674459485],\n",
+       "[-0.439904038809209, -0.542017276544014, -0.716031918679017]])"
+      ]
+     },
+     "execution_count": 860,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rrpy_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 838,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[ 0.076114550203711, 0.109067394499169, -0.991115976414693,  0.117692750055993],\n",
+       "[-0.567203669932663,  -0.8127674178505, -0.133000455997529, -0.877043345556974],\n",
+       "[-0.820052786143798, 0.572287889036448,                  0,  0.943674943521757],\n",
+       "[                 0,                 0,                  0,                1.0]])"
+      ]
+     },
+     "execution_count": 838,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t03_eval = T0_3.evalf(subs={q1: theta1, q2: theta2, q3:theta3})\n",
+    "t03_eval = t03_eval\n",
+    "r03 = t03_eval[:3,:3]\n",
+    "t03_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 839,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[ 0.076114550203711, 0.109067394499169, -0.991115976414693],\n",
+       "[-0.567203669932663,  -0.8127674178505, -0.133000455997529],\n",
+       "[-0.820052786143798, 0.572287889036448,                  0]])"
+      ]
+     },
+     "execution_count": 839,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 852,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "r30 = r03.inv('LU') * Rrpy_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 853,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[-0.897416344250283,  0.295142804267754,  0.327924732463753],\n",
+       "[0.0335907980227173,  0.786834161063674, -0.616249674459485],\n",
+       "[-0.439904038809209, -0.542017276544015, -0.716031918679017]])"
+      ]
+     },
+     "execution_count": 853,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r03 * r30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 854,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "r36 = r30 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 855,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[   0.43990403880921, -0.542017276544014, -0.716031918679017],\n",
+       "[-0.0335907980227173, -0.806696272096555,  0.590010832844379],\n",
+       "[ -0.897416344250283, -0.235496064751262, -0.373075741048821]])"
+      ]
+     },
+     "execution_count": 855,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R0_6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 856,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "[-0.897416344250283,  0.295142804267754,  0.327924732463753],\n",
+       "[0.0335907980227172,  0.786834161063674, -0.616249674459485],\n",
+       "[-0.439904038809209, -0.542017276544014, -0.716031918679017]])"
+      ]
+     },
+     "execution_count": 856,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rrpy_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 857,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "theta4, theta5, theta6 = tf.transformations.euler_from_matrix(np.matrix(r36),axes='ryzx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 858,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('theta 4', -1.2711778625228516)\n",
+      "('theta 5', -1.9572782007718392)\n",
+      "('theta 6', -4.574998006834328)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"theta 4\", theta4)\n",
+    "print(\"theta 5\", theta5 - np.pi/2 )\n",
+    "print(\"theta 6\", theta6 - np.pi/2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
